--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-node",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,14 +13,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/sagardabas0007/todo-node.js/issues"
   },
   "homepage": "https://github.com/sagardabas0007/todo-node.js#readme",
   "dependencies": {
-    "commander": "^14.0.1",
-    "inquirer": "^12.9.6",
-    "uuid": "^13.0.0"
+    "chalk": "^5.6.2",
+    "commander": "^14.0.1"
   }
 }
