--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/sagardabas0007/todo-node.js#readme",
   "dependencies": {
     "chalk": "^5.6.2",
-    "commander": "^14.0.1"
+    "commander": "^14.0.1",
+    "express": "^5.1.0"
   }
 }
